--- a/portfolio/manifest/package.xml
+++ b/portfolio/manifest/package.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Portfolio_Flow_1</members>
+        <!--<members>Portfolio_Flow_1</members>-->
         <name>Flow</name>
+    </types>
+    <types>
+        <members>resume</members>
+        <members>body</members>
+        <members>container</members>
+        <name>LightningComponentBundle</name>
     </types>
     <version>59.0</version>
 </Package>
