Speech to Text Works :) - 1.00

--- a/portfolio/manifest/package.xml
+++ b/portfolio/manifest/package.xml
@@ -5,9 +5,12 @@
         <name>Flow</name>
     </types>
     <types>
+        <!--
         <members>resume</members>
         <members>body</members>
         <members>container</members>
+        -->
+        <members>speech2Text</members>
         <name>LightningComponentBundle</name>
     </types>
     <version>59.0</version>
